--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,17 @@ title: oeilgauche
 tagline: A log of everyday life
 description: My awesome new site
 paginate: 5
-media: assets
-metadata:
-  _posts:
-    - name: "layout"
-      field:
-        element: "hidden"
-        value: "post"
-    - name: "tags"
-        element: "multiselect"
-        options: "array"
-    - name: "categories"
-        element:"multiselect"
-        options: "array"
+prose:
+  media: assets
+  metadata:
+    _posts:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "post"
+      - name: "tags"
+          element: "multiselect"
+          options: "array"
+      - name: "categories"
+          element:"multiselect"
+          options: "array"
