--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,4 @@ prose:
           element: "hidden"
           value: "post"
       - name: "tags"
-          element: "multiselect"
-          options: "array"
-      - name: "categories"
-          element: "multiselect"
-          options: "array"
+          element: "text"
