--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,8 @@ prose:
         field:
           element: "hidden"
           value: "post"
+      - name: "category"
+        field:
+          element: "text"
+          label: "Category"
+          value: ""
